2009-11-14  Shigeru Fukaya  <shigeru.fukaya@gmail.com>

	* emacs-lisp/elint.el (elint-standard-variables): Add some variables
	defined in C that have no doc-strings.  (Bug#1063)

2009-11-14  Francis Wright  <F.J.Wright@qmul.ac.uk>

	* cus-edit.el (data, files):
	* ps-print.el (postscript): Doc fixes for custom groups.  (Bug#3327)

2009-11-14  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (shell-command): Doc fix (Bug#4891).

	* help-mode.el (help-make-xrefs): Revert 2009-11-13 change.

2009-11-14  Glenn Morris  <rgm@gnu.org>

	* emulation/viper.el (viper-set-hooks): Remove duplicate advice
	statements for vc-diff, emerge-quit, and rmail-cease-edit.
	If they are already loaded, eval-after-load will do the right thing.

	* speedbar.el (top-level): Remove unnecessary load of ange-ftp when
	compiling.

	* emacs-lisp/bytecomp.el (byte-compile-single-version): Remove, unused.

	* simple.el (x-selection-owner-p): Declare.
	(read-mail-command): Use custom radio type rather than choice.
	(completion-no-auto-exit): Doc fix.

	* custom.el (defgroup):
	* epg-config.el (epg): Doc fixes.

2009-11-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* bindings.el (mode-line-buffer-identification): Purecopy only the string.
	* international/ccl.el (define-ccl-program): Do not purecopy the
	docstring, defconst does it anyway.

2009-11-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* add-log.el (add-change-log-entry): Avoid displaying the changelog
	a second time.

	* x-dnd.el (x-dnd-maybe-call-test-function):
	* window.el (split-window-vertically):
	* whitespace.el (whitespace-help-on):
	* vc-rcs.el (vc-rcs-consult-headers):
	* userlock.el (ask-user-about-lock-help)
	(ask-user-about-supersession-help):
	* type-break.el (type-break-force-mode-line-update):
	* time-stamp.el (time-stamp-conv-warn):
	* terminal.el (te-set-output-log, te-more-break, te-filter)
	(te-sentinel,terminal-emulator):
	* term.el (make-term, term-exec, term-sentinel, term-read-input-ring)